# umain-picksy

./: .gitmodules  AGENTS.md  README.md  biome.json  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: chat-transcript-2026-02-06.md  ditto-investigation.md  ditto-sync.md  ditto.md  id.md  known-issue-rust-analyzer.md
src/: App.css  App.tsx  EditingScreen.tsx  EditingSettingsBar.tsx  PhotoComponent.tsx  PicksyView.tsx  effect-react.ts
src-tauri/: .env  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ditto_repo.rs  lib.rs  main.rs  vision.rs
src-tauri/src/commands/: image_analysis.rs  mod.rs  photo_library_commands.rs
src/backend/: commandStream.ts  commands.ts  events.ts  hooks.ts  invoke.ts  listen.ts  photo-library-context.tsx  schemas.ts
src/components/: TopBar.tsx  photo-component.tsx  photo-editor-sidebar.tsx  screen-wrapper.tsx  swirly-top-right-arrow.tsx  theme-provider.tsx  theme-toggle.tsx  top-bar.tsx
src/lib/: app-locations.ts  events.ts  library.ts  synchronization.ts  vision.ts  windows.ts
src/pages/: Edit.tsx  EditingScreen.tsx  EditingSettingsBar.tsx  Gallery.tsx  Home.tsx  PhotoComponent.tsx  home.tsx  image-gallery.tsx  photo-component.tsx  photo-editor.tsx
subtasks/backend/: US-1.1-select-source-folder.md  (+12 more)
user-stories/: 01-gallery.md  02-stack-picking.md  03-grouping-content.md  04-grouping-time.md  05-facial-recognition.md  06-object-detection.md  07-undo.md  08-collaborative-library.md  README.md
(+26 files in other folders)
