[package]
name = "umain-picksy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "umain_picksy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Optional Vision-based face detection on macOS (off by default)
vision_face_detect = []

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
image = "0.25"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
# Apple frameworks bindings (macOS/iOS)
objc2 = "0.5"
objc2-foundation = "0.3.2"
objc2-vision = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-image-io = "0.3.2"
# For simple EXIF parsing fallback
rexif = "0.7"
# collab
dittolive-ditto = "=4.12.0"
dotenvy = "0.15"
base64 = "0.22.1"
